Added one paragrah and added title for the search results.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <h1 class="title">Winnipeg Building Permit Data</h1>
+    <p>
+      This search lets you find building permit information in Winnipeg by
+      address.
+    </p>
 
     <input class="search" type="text" placeholder="Pls give me the address!" />
     <button class="search-btn">Search</button>
